objects/ObjectWeWillChangeValues__c.object
<CustomObject>
    <fields>
        <fullName>SomeEmail__c</fullName>
        <label>SomeEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>somePercent__c</fullName>
        <label>somePercent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>somePhone__c</fullName>
        <label>somePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>someUrl__c</fullName>
        <label>someUrl</label>
        <type>Url</type>
    </fields>
    <label>ObjectWeWillChangeValues</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ObjectWeWillChangeValues Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ObjectWeWillChangeValuess</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>